--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,3 +4,123 @@
     margin: 0px;
     padding: 0px;
 }
+span.destaque{
+    font-weight: bold;
+}
+body{
+    background-image: linear-gradient(to top, #725a4a, #ffefdb);
+}
+header{
+    background-image: url(../imagens/pexels-jourdan-wee-3644098.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:auto;
+    
+   
+}
+header > h1{
+    text-align: center;
+    font-style: italic;
+    color:white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 4em;
+}
+header > h4{
+    text-align: center;
+    color: white;
+    margin: 10px;
+}
+
+a > li{
+    marker: none;
+    display: inline-block;
+    color: white;
+    padding: 10px;
+    background-color: rgb(31, 30, 30);
+    border-radius: 5px;
+}
+a > li:hover{
+    background-color: white;
+    color: black;
+    font-style: italic;
+    font-weight: bold;
+}
+main{
+    width: 65vw;
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+}
+section.internet > h1{
+    margin: 10px;
+    text-align: center;
+    text-decoration: underline;
+    font-style: italic;
+    font-size: 2em;
+}
+section.internet > p{
+    padding: 10px;
+    text-indent: 30px;
+    text-align: justify;
+    margin: 0px 10px;
+ 
+}
+span.link{
+    background-color: #ffefdb;
+    color: black;
+    margin: 0px 10px;
+    border-radius: 5px;
+   
+    
+}span.link::after{
+    padding: 10px;
+    content: '\27A5';
+
+}
+span.link:hover{
+    background-color: black;
+    color: white;
+    font-style: italic;
+    font-weight: bolder;
+}
+section.html > h2{
+    margin: 10px;
+    text-align: center;
+    text-decoration: underline;
+    font-style: italic;
+    font-size: 2em;
+}
+section.html > p{
+    padding: 10px;
+    text-indent: 30px;
+    text-align: justify;
+    margin: 0px 10px;
+}
+section.tag > h2{
+    margin: 10px;
+    text-align: center;
+    text-decoration: underline;
+    font-style: italic;
+    font-size: 2em;
+}
+section.tag > p{
+    padding: 10px;
+    text-indent: 30px;
+    text-align: justify;
+    margin: 0px 10px;
+}
+section.tag > div{
+    background-color: aliceblue;
+    width: 60%;
+    margin: auto;
+
+}
+div > p{
+    padding: 5px;
+}
+footer{
+    background-color: #ffefdb;
+    width: 100vw;
+    margin: auto;
+    text-align: center;
+}
