--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@ header{
     background-image: url(../imagens/pexels-jourdan-wee-3644098.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
+    background-size: auto;
     
     
    
