--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,7 @@ header > h4{
 }
 
 span.material-symbols-outlined{
-    background-color: #5a4f4886;
+    background-color: #8A9093;
     display: block;
     color:rgb(17, 16, 16);
     display: block;
