--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,10 +12,8 @@ header{
     background-image: url(../imagens/pexels-jourdan-wee-3644098.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
     
-    
-
 }
 header > h1{
     text-align: center;
@@ -23,11 +21,13 @@ header > h1{
     color:white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 4em;
+   
 }
 header > h4{
     text-align: center;
     color: white;
-    margin: 10px;
+    padding: 10px;
+
 }
 
 span.material-symbols-outlined{
@@ -36,6 +36,8 @@ span.material-symbols-outlined{
     color:rgb(17, 16, 16);
     display: block;
     text-align: center;
+
+    
 }
 span.material-symbols-outlined:hover{
     background-color: rgb(182, 182, 182);
@@ -45,6 +47,7 @@ span.material-symbols-outlined:hover{
 
 menu{
     display: none;
+
     
 }
 menu > ul > a{
@@ -56,7 +59,9 @@ menu > ul > a{
 menu > ul > a > li{
     text-align: center;
     background-color: #EDDBC8;
-    padding: 2px    ;
+
+
+    
 }
 menu > ul > a > li:hover{
     background-color: white;
@@ -66,10 +71,10 @@ menu > ul > a > li:hover{
 }
 
 main{
-   
     background-color: white;
     margin: auto;
-    padding: 5px;
+    box-shadow: 0px 2px 10px black;
+   
 }
 section.internet > h1{
     margin: 10px;
@@ -142,10 +147,12 @@ div {
 div > p{
     padding: 5px;
 }
+
 footer{
     background-color: #192a51;
     width: 100vw;
     margin: auto;
     text-align: center;
     color: white;
+    padding: 10px;
 }
