--- a/estilos/medias.css
+++ b/estilos/medias.css
@@ -8,11 +8,12 @@
    
     body{
         background-image: linear-gradient(to top, #192a51, #969B9A);
+        
        
     }
     body > main{
         width: 80vw ;
-     
+
     }
 }
 @media screen and (min-width: 992px){
@@ -21,6 +22,7 @@
     }
     body > main{
         width: 60vw ;
+        padding: 0px;
         
     }
    span.material-symbols-outlined{
@@ -32,7 +34,8 @@
        display: inline-block;
        border-radius: 5px;
        width: 180px;
-       padding: 5px;
+       padding: 5px; 
+       margin: 0px;
    
       
        
