--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,9 +36,6 @@ span.material-symbols-outlined{
     color:rgb(17, 16, 16);
     display: block;
     text-align: center;
-
- 
-
     
 }
 span.material-symbols-outlined:hover{
@@ -96,17 +93,16 @@ span.link{
     background-color: #ffefdb;
     color: black;
     margin: 0px 10px;
-    border-radius: 5px;
-
-    
-}span.link::after{
+    border-radius: 5px;   
+}
+span.link::after{
     padding: 10px;
     content: '\27A5';
 
 }
 span.link:hover{
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-style: italic;
     font-weight: bolder;
 }
@@ -149,12 +145,27 @@ div {
 div > p{
     padding: 5px;
 }
+a > small#voltar{
+    background-color: #EDDBC8;
+    color: black;
+    font-size: 1em;
+    margin: 10px;
+    border-radius: 2px;
 
+}
+a > small#voltar:after{
+    padding: 10px;
+    content: '\27A5';
+}
+a > small#voltar:hover{
+    background-color: white;
+    font-style: italic;
+}
 footer{
     background-color: #192a51;
     width: 100vw;
     margin: auto;
     text-align: center;
     color: white;
-    padding: 10px;
+    padding: 5px;
 }
