--- a/estilos/medias.css
+++ b/estilos/medias.css
@@ -13,6 +13,7 @@
     }
     body > main{
         width: 80vw ;
+        margin: auto;
 
     }
 }
@@ -23,6 +24,7 @@
     body > main{
         width: 60vw ;
         padding: 0px;
+        margin: auto;
         
     }
    span.material-symbols-outlined{
