--- a/estilos/style.css
+++ b/estilos/style.css
@@ -140,7 +140,9 @@ section.tag > div{
 }
 div {
     padding: 20px; 
-    margin: 10px;  
+    margin: 10px; 
+    border: 1px solid black;
+    border-radius: 10px;
 }
 div > p{
     padding: 5px;
